# robot

./: .env.example  .gitignore  AGENTS.md  AZURE_OPENAI_STATUS.md  README.md  main.py  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/: renovate.json5
.github/workflows/: lint.yml
.kiro/steering/: product.md  structure.md  tech.md
app/: __init__.py  agent.py  agent_client.py  agent_official.py  agent_realtime.py  agent_simple.py  agent_voice.py  audio_io.py  config.py  doa_tracker.py  emotion_loader.py  face_tracker.py  head_wobbler.py  interruptible_player.py  main.py  mic_watchdog.py  movement_manager.py  orchestrator.py  playback.py  robot_state.py  robot_tools.py  session_store.py  stt_service.py  tools.py  tts_service.py  wake_detector.py
dashboard/: pyproject.toml  server.py
dashboard/templates/: base.html  conversation.html  faces.html  index.html  services.html  settings.html
dashboard/templates/partials/: agent_button.html  conversation.html  faces.html  gpu.html  mic_button.html  services.html  settings.html
docs/: setup-gtx1070-arch.md
scripts/: run_app.sh  run_llama_server.sh
tts_server/: pyproject.toml  server.py
