[project]
name = "reachy-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14" # for scipy dep of reachy-mini
dependencies = [
    "reachy-mini[mujoco]==1.0.0",
    "openai-agents==0.4.2",
    "python-dotenv==1.2.1",
    "reachy-mini-dances-library==0.2.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.0",
    "ty==0.0.1a25",
]

[tool.ruff]
line-length = 120

# Enable import sorting
[tool.ruff.lint]
select = ["I"]  # Enable isort rules
