[project]
name = "reachy-local-agent"
version = "0.1.0"
description = "Local voice-driven agent for Reachy Mini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reachy-mini>=1.6.0",
    "faster-whisper>=1.1.0",
    "piper-tts>=1.4.0",
    "openai>=1.0.0",
    "silero-vad>=5.1",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "opencv-contrib-python>=4.10.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.24.4",
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
    "duckduckgo-search>=8.1.1",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "huggingface-hub>=1.3.0",
    "ddgs>=9.14.1",
]

[project.optional-dependencies]
sim = ["reachy-mini[mujoco]"]
dances = ["reachy-mini-dances-library>=0.2.0"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "ty>=0.0.1a25",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]
