[project]
name = "reachy-dashboard"
version = "0.1.0"
description = "Web dashboard for the Reachy Mini robot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
